JDO-342 Changed Character.valueOf to new Character to support JDK 1.4